--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
   <tabs>
     <Tab text="  DELETE Student">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <AnchorPane prefHeight="367.0" prefWidth="600.0">
+                  <AnchorPane layoutY="2.0" prefHeight="367.0" prefWidth="600.0">
                      <children>
-                        <Label layoutX="38.0" layoutY="50.0" prefHeight="18.0" prefWidth="50.0" text="Name" />
-                        <TextField fx:id="deleteNameTextField" layoutX="178.0" layoutY="46.0" />
-                        <Label layoutX="38.0" layoutY="108.0" prefHeight="18.0" prefWidth="65.0" text="Student ID" />
-                        <TextField fx:id="deleteStuIdTextField" layoutX="178.0" layoutY="104.0" />
-                        <Button fx:id="deleteButton" layoutX="234.0" layoutY="215.0" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="26.0" prefWidth="102.0" text="DELETE" />
-                        <Label layoutX="38.0" layoutY="155.0" prefHeight="18.0" prefWidth="100.0" text="Name of the Club" />
-                        <TextField fx:id="deleteClubNameTextField" layoutX="178.0" layoutY="151.0" />
+                        <Label layoutX="31.0" layoutY="43.0" prefHeight="18.0" prefWidth="87.0" text="First Name" />
+                        <TextField fx:id="deleteFNameTextField" layoutX="234.0" layoutY="39.0" />
+                        <Label layoutX="31.0" layoutY="152.0" prefHeight="18.0" prefWidth="114.0" text="Student/Teacher ID" />
+                        <TextField fx:id="deleteStuIdTextField" layoutX="234.0" layoutY="149.0" />
+                        <Button fx:id="deleteButton" layoutX="234.0" layoutY="266.0" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="26.0" prefWidth="102.0" text="DELETE" />
+                        <Label layoutX="31.0" layoutY="213.0" prefHeight="18.0" prefWidth="100.0" text="Name of the Club" />
+                        <TextField fx:id="deleteClubNameTextField" layoutX="234.0" layoutY="210.0" />
+                        <Label layoutX="31.0" layoutY="91.0" prefHeight="18.0" prefWidth="93.0" text="Last Name" />
+                        <TextField fx:id="deleteLNameTextField" layoutX="235.0" layoutY="88.0" />
+                        <Button layoutX="462.0" layoutY="39.0" mnemonicParsing="false" onAction="#reset" text="RESET" />
+                        <Button fx:id="exitbutton" layoutX="470.0" layoutY="267.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                      </children>
                   </AnchorPane>
                </children></AnchorPane>
@@ -51,8 +46,8 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Label layoutX="35.0" layoutY="37.0" prefHeight="18.0" prefWidth="79.0" text="Name" />
-                                    <TextField fx:id="markNameTextField" layoutX="106.0" layoutY="33.0" styleClass="" />
+                                    <Label layoutX="35.0" layoutY="37.0" prefHeight="18.0" prefWidth="79.0" text="First Name" />
+                                    <TextField fx:id="markFNameTextField" layoutX="129.0" layoutY="33.0" styleClass="" />
                                     <Label layoutX="310.0" layoutY="36.0" prefHeight="18.0" prefWidth="71.0" text="Student ID" />
                                     <TextField fx:id="markStuIdTextField" layoutX="413.0" layoutY="33.0" />
                                     <Label layoutX="310.0" layoutY="85.0" prefHeight="18.0" prefWidth="71.0" text="Club Name" />
@@ -62,10 +57,14 @@
                                     <Label layoutX="39.0" layoutY="203.0" prefHeight="18.0" prefWidth="71.0" text="Status" />
                                     <RadioButton fx:id="absentRadioButton" layoutX="151.0" layoutY="203.0" mnemonicParsing="false" text="Absent" />
                                     <RadioButton fx:id="presentRadioButton" layoutX="256.0" layoutY="203.0" mnemonicParsing="false" text="Present" />
-                                    <Button fx:id="submitButton" layoutX="397.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleSubmitButton" prefHeight="32.0" prefWidth="130.0" text="SUBMIT" />
-                                    <Button layoutX="121.0" layoutY="81.0" mnemonicParsing="false" onAction="#handleCheckButton" prefHeight="26.0" prefWidth="118.0" text="CHECK" />
-                                    <Button layoutX="128.0" layoutY="260.0" mnemonicParsing="false" onAction="#Updatestatus" prefHeight="32.0" prefWidth="130.0" text="UPDATE" />
+                                    <Button fx:id="submitButton" layoutX="422.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleSubmitButton" prefHeight="32.0" prefWidth="130.0" text="SUBMIT" />
+                                    <Button layoutX="245.0" layoutY="261.0" mnemonicParsing="false" onAction="#handleCheckButton" prefHeight="31.0" prefWidth="131.0" text="CHECK" />
+                                    <Button layoutX="56.0" layoutY="260.0" mnemonicParsing="false" onAction="#Updatestatus" prefHeight="32.0" prefWidth="130.0" text="UPDATE" />
                                     <RadioButton fx:id="pendingRadioButton" layoutX="372.0" layoutY="203.0" mnemonicParsing="false" text="Pending" />
+                                    <Label layoutX="35.0" layoutY="76.0" prefHeight="18.0" prefWidth="66.0" text="Last Name" />
+                                    <TextField fx:id="markLNameTextField" layoutX="130.0" layoutY="73.0" />
+                                    <Button layoutX="42.0" layoutY="148.0" mnemonicParsing="false" onAction="#reset" text="RESET" />
+                                    <Button layoutX="487.0" layoutY="148.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -74,21 +73,25 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Label layoutX="36.0" layoutY="42.0" prefHeight="18.0" prefWidth="79.0" text="Name" />
+                                    <Label layoutX="36.0" layoutY="42.0" prefHeight="18.0" prefWidth="79.0" text="First Name" />
                                     <Label layoutX="309.0" layoutY="42.0" prefHeight="18.0" prefWidth="71.0" text="Teacher ID" />
                                     <Label layoutX="309.0" layoutY="87.0" prefHeight="18.0" prefWidth="71.0" text="Club Name" />
                                     <Label layoutX="166.0" layoutY="152.0" text="Event Name" />
                                     <Label layoutX="36.0" layoutY="209.0" prefHeight="18.0" prefWidth="71.0" text="Status" />
-                                    <TextField fx:id="markT_NameTextField" layoutX="108.0" layoutY="38.0" />
+                                    <TextField fx:id="markT_FNameTextField" layoutX="108.0" layoutY="38.0" />
                                     <TextField fx:id="markTeaIdTextField" layoutX="423.0" layoutY="38.0" />
                                     <TextField fx:id="markTeaClubNameTextField" layoutX="423.0" layoutY="84.0" />
                                     <ComboBox fx:id="T_Eventlist" layoutX="281.0" layoutY="148.0" prefWidth="150.0" />
                                     <RadioButton fx:id="T_absentRadioButton" layoutX="153.0" layoutY="209.0" mnemonicParsing="false" text="Absent" />
                                     <RadioButton fx:id="T_presentRadioButton" layoutX="258.0" layoutY="209.0" mnemonicParsing="false" text="Present" />
                                     <Button fx:id="T_submitButton" layoutX="432.0" layoutY="260.0" mnemonicParsing="false" onAction="#T_handleSubmitButton" prefHeight="32.0" prefWidth="131.0" text="SUBMIT" />
-                                    <Button layoutX="124.0" layoutY="83.0" mnemonicParsing="false" onAction="#T_handleCheckButton" prefHeight="26.0" prefWidth="118.0" text="CHECK" />
-                                    <Button layoutX="146.0" layoutY="259.0" mnemonicParsing="false" onAction="#T_Updatestatus" prefHeight="33.0" prefWidth="131.0" text="UPDATE" />
+                                    <Button layoutX="250.0" layoutY="263.0" mnemonicParsing="false" onAction="#T_handleCheckButton" prefHeight="26.0" prefWidth="118.0" text="CHECK" />
+                                    <Button layoutX="49.0" layoutY="259.0" mnemonicParsing="false" onAction="#T_Updatestatus" prefHeight="33.0" prefWidth="131.0" text="UPDATE" />
                                     <RadioButton fx:id="T_pendingRadioButton" layoutX="356.0" layoutY="209.0" mnemonicParsing="false" text="Pending" />
+                                    <TextField fx:id="markT_LNameTextField" layoutX="109.0" layoutY="84.0" />
+                                    <Label layoutX="35.0" layoutY="88.0" text="Last Name" />
+                                    <Button layoutX="37.0" layoutY="148.0" mnemonicParsing="false" onAction="#reset" text="RESET" />
+                                    <Button layoutX="498.0" layoutY="148.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -119,6 +122,7 @@
                                     </BarChart>
                                     <Button layoutX="47.0" layoutY="198.0" mnemonicParsing="false" onAction="#showEventStatusChart" prefHeight="26.0" prefWidth="41.0" text="SET" />
                                     <ComboBox fx:id="eventComboBox" layoutX="14.0" layoutY="293.0" prefWidth="150.0" />
+                                    <Button layoutX="42.0" layoutY="36.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -137,6 +141,7 @@
                                         <NumberAxis side="LEFT" />
                                       </yAxis>
                                     </BarChart>
+                                    <Button layoutX="38.0" layoutY="24.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                                  </children></AnchorPane>
                         </content>
                       </Tab>
@@ -157,6 +162,7 @@
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <Button layoutX="256.0" layoutY="146.0" mnemonicParsing="false" onAction="#exportToCsv" text="GENERATE" />
+                                    <Button layoutX="492.0" layoutY="269.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                                  </children>
                               </AnchorPane>
                         </content>
@@ -166,6 +172,7 @@
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <Button layoutX="248.0" layoutY="132.0" mnemonicParsing="false" onAction="#exportToCsv_T" text="GENERATE" />
+                                    <Button layoutX="507.0" layoutY="269.0" mnemonicParsing="false" onAction="#exit" text="EXIT" />
                                  </children>
                               </AnchorPane>
                         </content>
